# EXCELLENCECECPP_FinalProject

hello_drogon/: CMakeLists.txt  config.json  main.cc
hello_drogon/Repository/: DB_Repository.cc  DB_Repository.h  OpenAiRepository.cc  OpenAiRepository.h  UserRepository.h  repo_key.h
hello_drogon/controllers/: AiController.cc  AiController.h  UserWithRolesController.cc  UserWithRolesController.h  UsersView.csp
hello_drogon/models/: Roles.cc  Roles.h  Users.cc  Users.h  model.json
hello_drogon/public/: ai_usage.html  index.html
hello_drogon/services/: AiService.cc  AiService.h  UserService.cc  UserService.h
hello_drogon/test/: CMakeLists.txt
include/: A.h
src/: A.cpp  CMakeLists.txt  main.cpp
start_project/: init_db_with_roles.sql
start_project/hello_drogon/: CMakeLists.txt  config.json
start_project/hello_drogon/Repository/: UserRepository.cc
start_project/hello_drogon/controllers/: UsersController.cc  UsersController.h
